# portfolio-optimiser

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: sample_price_data.csv
docs/: index.html
examples/: demo.ipynb
portfolio_optimiser/: __init__.py  backtester.py  constraints.py  costs.py  data_loader.py  factor_model.py  hrp.py  optimizer.py  report.py
tests/: __init__.py  conftest.py  test_backtester.py  test_constraints.py  test_costs.py  test_optimizer.py  test_report.py  test_strategies.py
